Add kitty theme metadata for autoupdates

--- a/extras/kitty/mellow.conf
+++ b/extras/kitty/mellow.conf
@@ -1,4 +1,10 @@
-# Mellow colorscheme for kitty
+# vim:ft=kitty
+## name: Mellow
+## license: MIT
+## upstream: https://raw.githubusercontent.com/mellow-theme/mellow.nvim/refs/heads/main/extras/kitty/mellow.conf
+## blurb: A soothing, dark color palette.
+## Crafted to be easy on the eyes with a focus on code readability.
+
 cursor #e3e2e5
 foreground #c9c7cd
 background #161617
